[gd_scene load_steps=3 format=3 uid="uid://dku5r3f77amfb"]

[ext_resource type="Script" path="res://src/objects/wheel/wheel.gd" id="1_2bwdd"]
[ext_resource type="Texture2D" uid="uid://dkj6cum2qyb5g" path="res://assets/wheel/wheel_2.png" id="2_alkvf"]

[node name="Wheel" type="Control"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(250, 250)
script = ExtResource("1_2bwdd")

[node name="wheel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(248, 248)
texture = ExtResource("2_alkvf")

[node name="Alleles" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="alleles1" type="VBoxContainer" parent="Alleles"]
custom_minimum_size = Vector2(45, 155)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -230.0
offset_right = 23.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(22, 0)
theme_override_constants/separation = 10
alignment = 1

[node name="alleles2" type="VBoxContainer" parent="Alleles"]
custom_minimum_size = Vector2(45, 155)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 142.0
offset_top = -162.0
offset_right = 187.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
pivot_offset = Vector2(22, 0)

[node name="alleles3" type="VBoxContainer" parent="Alleles"]
custom_minimum_size = Vector2(45, 155)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_right = 255.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
pivot_offset = Vector2(22, 0)
theme_override_constants/separation = 10
alignment = 1

[node name="alleles4" type="VBoxContainer" parent="Alleles"]
custom_minimum_size = Vector2(45, 155)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 142.0
offset_top = 162.0
offset_right = 187.0
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2
rotation = 2.35619
pivot_offset = Vector2(22, 0)

[node name="alleles5" type="VBoxContainer" parent="Alleles"]
custom_minimum_size = Vector2(45, 155)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = 230.0
offset_right = 23.0
offset_bottom = 385.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
pivot_offset = Vector2(22, 0)
theme_override_constants/separation = 10
alignment = 1

[node name="alleles6" type="VBoxContainer" parent="Alleles"]
custom_minimum_size = Vector2(45, 155)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = 160.0
offset_right = -137.0
offset_bottom = 315.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.92699
pivot_offset = Vector2(22, 0)

[node name="alleles7" type="VBoxContainer" parent="Alleles"]
custom_minimum_size = Vector2(45, 155)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_right = -205.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
rotation = 4.71239
pivot_offset = Vector2(22, 0)
theme_override_constants/separation = 10
alignment = 1

[node name="alleles8" type="VBoxContainer" parent="Alleles"]
custom_minimum_size = Vector2(45, 155)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -162.0
offset_right = -139.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
rotation = 5.49779
pivot_offset = Vector2(22, 0)
